# nyan

./: .gitignore  CLAUDE.md  README.md  SPEC.txt  fix-path.ps1  package.json  pyproject.toml  setup.ps1
.claude/: settings.local.json
.claude/rules/: mcp-tools.md  td-essentials.md  td-knowledge.md  td-reference-data.md  td-workflow.md
data/: patterns.json
data/operators/: ableton_link_chop.json  accumulate_pop.json  actor_comp.json  add_sop.json  add_top.json  alembic_sop.json  align_sop.json  ambient_light_comp.json  analyze_chop.json  analyze_pop.json  analyze_top.json  angle_chop.json  animation_comp.json  annotate_comp.json  anti_alias_top.json  arm_sop.json  art-net_dat.json  attribute_chop.json  attribute_combine_pop.json  attribute_convert_pop.json  attribute_create_sop.json  attribute_pop.json  attribute_sop.json  audio_band_eq_chop.json  audio_binaural_chop.json  audio_device_in_chop.json  audio_device_out_chop.json  audio_devices_dat.json  audio_dynamics_chop.json  audio_file_in_chop.json  audio_file_out_chop.json  audio_filter_chop.json  audio_movie_chop.json  audio_ndi_chop.json  audio_oscillator_chop.json  audio_para_eq_chop.json  audio_play_chop.json  audio_render_chop.json  audio_spectrum_chop.json  audio_stream_in_chop.json  (+589 more)
data/python-api/: App.json  Attribute.json  Attributes.json  Bounds.json  CHOP.json  COMP.json  (+63 more)
docs/: roadmap-typed-parser.md  td-operators-full.md  toeexpand-editing-guide.md  toeexpand-guide.md  validator-spec.md
scripts/: fix-path.js  new-project.js  setup.js  validate_toe.py
src/: __init__.py
template/: README.md
(+8 files in other folders)
